--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "db:studio": "prisma studio"
   },
   "dependencies": {
+    "@base-ui/react": "^1.1.0",
     "@lexical/react": "^0.39.0",
     "@lexical/rich-text": "^0.39.0",
     "@prisma/client": "^6.19.1",
@@ -20,16 +21,19 @@
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-label": "^2.1.8",
+    "@radix-ui/react-popover": "^1.1.15",
     "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-separator": "^1.1.8",
     "@radix-ui/react-slot": "^1.2.4",
     "@radix-ui/react-switch": "^1.2.6",
     "@radix-ui/react-tooltip": "^1.2.8",
     "@supabase/ssr": "^0.8.0",
+    "@tabler/icons-react": "^3.36.1",
     "@tanstack/react-table": "^8.21.3",
     "@yandex/ymaps3-default-ui-theme": "^0.0.24",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cmdk": "^1.1.1",
     "lexical": "^0.39.0",
     "lucide-react": "^0.562.0",
     "next": "16.1.1",
