--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@yandex/ymaps3-default-ui-theme": "^0.0.24",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cmdk": "^1.1.1",
     "lexical": "^0.39.0",
     "lucide-react": "^0.562.0",
     "next": "16.1.1",
