--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@supabase/ssr": "^0.8.0",
     "@tanstack/react-table": "^8.21.3",
     "@yandex/ymaps3-default-ui-theme": "^0.0.24",
+    "browser-image-compression": "^2.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
@@ -37,7 +38,8 @@
     "next-themes": "^0.4.6",
     "react": "19.2.3",
     "react-dom": "19.2.3",
-    "tailwind-merge": "^3.4.0"
+    "tailwind-merge": "^3.4.0",
+    "uuid": "^13.0.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
