--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "cmdk": "^1.1.1",
     "lexical": "^0.39.0",
     "lucide-react": "^0.562.0",
-    "next": "16.1.1",
+    "next": "^16.1.6",
     "next-themes": "^0.4.6",
     "react": "19.2.3",
     "react-dom": "19.2.3",
